Fixed overflow on homescreen wrapper

--- a/client/src/globalStyles.css
+++ b/client/src/globalStyles.css
@@ -1,4 +1,5 @@
-*, *::before, *::after {
-    box-sizing: border-box;
-  }
-  
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
